deploy/k8s/overlays/production/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cortex
spec:
  replicas: 5
  template:
    spec:
      containers:
      - name: cortex
        resources:
          requests:
            cpu: 1000m
            memory: 2Gi
          limits:
            cpu: 4000m
            memory: 8Gi
